[package]
name = "simple-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
async-std = "1.10.0"
axum = "0.4"
fuel-indexer = { path = "../../fuel-indexer" }
fuel-indexer-lib = { path = "../../fuel-indexer-lib" }
fuel-indexer-macros = { path = "../../fuel-indexer-macros" }
fuel-indexer-plugin = { path = "../../fuel-indexer-plugin" }
fuel-indexer-schema = { path = "../../fuel-indexer-schema", features = ["db-models"] }
fuel-tx = "0.9"
fuel-types = "0.5"
fuels = "0.15"
fuels-abigen-macro = "0.15"
fuels-core = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.8.19"
thiserror = "1.0"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
