[package]
name = "fuel-indexer-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuel-indexer-database-types = { version = "0.1.0", path = "../database-types" }
fuel-indexer-lib = { version = "0.1.0", path = "../../fuel-indexer-lib" }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "offline"] }
tracing = "0.1"
