[package]
name = "fuel-indexer-postgres"
version = "0.1.4"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-indexer"
description = "Fuel Indexer Postgres"

[dependencies]
fuel-indexer-database-types = { version = "0.1", path = "../database-types" }
fuel-indexer-lib = { version = "0.1", path = "../../fuel-indexer-lib" }
fuel-indexer-metrics = { version = "0.1", path = "../../fuel-indexer-metrics", optional = true }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "offline"] }
tracing = "0.1"

[features]
default = ["metrics"]
metrics = ["fuel-indexer-metrics"]
