[package]
name = "fuel-indexer-sqlite"
version = "0.1.4"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-indexer"
description = "Fuel Indexer Sqlite"

[dependencies]
fuel-indexer-database-types = { version = "0.1", path = "../database-types" }
fuel-indexer-lib = { version = "0.1", path = "../../fuel-indexer-lib" }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "offline", "json"] }
tracing = "0.1"
