[package]
name = "plugin-tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Tests for the Forc Index plugins"

[dependencies]

forc-index = { workspace = true }
fuel-indexer-plugin = { workspace = true }
tempfile = "3.4.0" 

