[package]
name = "forc-index"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Fuel Indexer forc plugin"

[dependencies]

actix-web = { version = "4", default-features = false, features = ["macros"] }
anyhow = "1"
clap = { features = ["derive", "env"], workspace = true }
forc-postgres = { workspace = true }
forc-tracing = { version = "0.31", default-features = false }
forc-util = { version = "0.35.0" }
fuel-indexer-database-types = { workspace = true }
fuel-indexer-lib = { workspace = true }
fuel-tx = { features = ["builder"], workspace = true }
fuels = { default-features = false, workspace = true }
hex = "0.4.3"
hyper-rustls = { version = "0.23", features = ["http2"] }
indicatif = "0.17"
inquire = "0.6"
lazy_static = "1.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart", "blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.8"
tempfile = "3.4.0"
tokio = { features = ["macros", "rt-multi-thread", "process"], workspace = true }
toml = "0.5"
tracing = { workspace = true }

[[bin]]
name = "forc-index"
path = "src/bin/forc-index.rs"

[lib]
path = "src/lib.rs"
