[package]
name = "forc-postgres"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Fuel Indexer forc Postgres plugin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "forc-postgres"
path = "src/bin/forc-postgres.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive", "env"] }
forc-tracing = { version = "0.31", default-features = false }
fuel-indexer-lib = { workspace = true }
home = "0.5"
indicatif = "0.17"
pg-embed = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread", "process"] }
tracing = "0.1"
