[package]
name = "forc-postgres"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Fuel Indexer forc Postgres plugin"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "forc-postgres"
path = "src/bin/forc-postgres.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { features = ["derive", "env"], workspace = true }
forc-tracing = { version = "0.31", default-features = false }
fuel-indexer-lib = { workspace = true }
home = "0.5"
indicatif = "0.17"
pg-embed = { version = "0.7" }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
tokio = { features = ["macros", "rt-multi-thread", "process"], workspace = true }
tracing = { workspace = true }
