[package]
name = "plugin-tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Tests for the Forc Index plugins"

[dependencies]

anyhow = "1"
clap = { version = "3", features = ["derive", "env"] }
fuel-indexer-macros = { version = "0.4", default-features = false }
fuel-indexer-plugin = { version = "0.4" }
forc-index = { workspace = true }
fuels-macros = { version = "0.37" }
forc-postgres = { workspace = true }
forc-tracing = { version = "0.31", default-features = false }
forc-util = { version = "0.35.0" }
fuel-indexer-lib = { workspace = true }
fuel-tx = { version = "0.26.0", features = ["builder"] }
fuels-types = { version = "0.37", default-features = false }
hex = "0.4.3"
hyper-rustls = { version = "0.23", features = ["http2"] }
indicatif = "0.17"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart", "blocking"] }
serde = "1.0"
serde_json = "1.0.73"
serde_yaml = "0.8"
tempfile = "3.4.0" 
tokio = { version = "1.8", features = ["macros", "rt-multi-thread", "process"] }
toml = "0.5"
tracing = "0.1"

[lib]
path = "src/lib.rs"
