[package]
name = "explorer-index"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
fuel-indexer-macros = { path = "../../../fuel-indexer-macros", default-features = false }
fuel-indexer-plugin = { path = "../../../fuel-indexer-plugin" }
fuel-indexer-schema = { path = "../../../fuel-indexer-schema", default-features = false }
fuel-tx = "0.18"
fuels-core = "0.26"
fuels-types = "0.26"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
