[package]
name = "explorer_index"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
fuel-indexer-macros = { version = "0.2", path = "../../../packages/fuel-indexer-macros", default-features = false }
fuel-indexer-plugin = { version = "0.2", path = "../../../packages/fuel-indexer-plugin" }
fuel-indexer-schema = { version = "0.2", path = "../../../packages/fuel-indexer-schema", default-features = false }
fuel-tx = "0.26.0"
fuels-core = { git = "https://github.com/FuelLabs/fuels-rs", branch = "segfault_magnet/wasm_friendly_abigen", default-features = false }
fuels-types = {   git = "https://github.com/FuelLabs/fuels-rs", branch = "segfault_magnet/wasm_friendly_abigen" , default-features = false }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
