[package]
name = "explorer_indexer"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
fuel-indexer-macros = { workspace = true, default-features = false }
fuel-indexer-plugin = { workspace = true }
fuel-indexer-schema = { workspace = true, default-features = false }
fuel-tx = "0.26"
fuels-core = { version = "0.38.1", default-features = false }
fuels-macros = { version = "0.38.1" }
fuels-types = { version = "0.38.1", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10" }
