[package]
name = "explorer_indexer"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
fuel-indexer-macros = { workspace = true, default-features = false }
fuel-indexer-plugin = { workspace = true }
fuel-indexer-schema = { workspace = true, default-features = false }
fuels = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
