[package]
name = "web-api-and-fuel-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-mutex = "1"
dotenv = "0.14"
fuels = "0.15"
fuels-abigen-macro = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
