[package]
name = "greetings_native_indexer"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.73.0"

[dependencies]
async-trait = { version = "0.1" }
fuel-indexer = { workspace = true }
fuel-indexer-utils = { workspace = true, features = ["native-execution"] }
fuels = { workspace = true, features = ["std"] }
serde = { workspace = true }
